Fixed jumping page issue, made the scrollbar invisible

--- a/frontend/css/todos.css
+++ b/frontend/css/todos.css
@@ -196,10 +196,16 @@ input:focus{
 }
 
 
-.todoList{
+.todoList {
     list-style-type: none;
     background-color: #f5f5f5;
     width: 33%;
+    overflow-y: scroll;
+}
+
+/* Hide scrollbar */
+::-webkit-scrollbar {
+    width: 0;
 }
 
 #titleInput{
